--- a/Resources/public/css/leaflet.map2u.css
+++ b/Resources/public/css/leaflet.map2u.css
@@ -51,7 +51,7 @@ and open the template in the editor.
 .tooltip.right .tooltip-arrow{top:50%;left:-5px;margin-top:-5px;border-right-color:white;border-width:5px 5px 5px 0}
 .tooltip.left .tooltip-arrow{top:50%;right:-5px;margin-top:-5px;border-left-color:white;border-width:5px 0 5px 5px}
 .tooltip.bottom .tooltip-arrow{top:-5px;left:50%;margin-left:-5px;border-bottom-color:white;border-width:0 5px 5px}
-.leaflet-control { z-index: inherit }
+
 .leaflet-control .control-button{display:block;height:40px;width:40px;background-color:#333;
                                  background-color:rgba(0,0,0,0.6);border-radius:4px 0 0 4px;margin-bottom:10px;outline:none
 }
@@ -71,7 +71,7 @@ and open the template in the editor.
 
 .sonata-bc #leaflet_content{overflow:hidden;position:absolute;top:125px;bottom:0;width:100%}
 .sonata-bc #sidebar {position:relative;height:100%;overflow-x:hidden;overflow-y:auto;background-color: rgba(255, 255, 255, 0.92);}
-.sonata-bc #sidebar {float:left;width:350px;font-size:12px;z-index: 500;}
+.sonata-bc #sidebar {float:left;width:350px;font-size:12px;}
 .sonata-bc #sidebar h2{padding:20px 20px 10px}
 .sonata-bc #sidebar .search_form {  margin-bottom:0px;padding-bottom:0px;}
 .sonata-bc #sidebar h3,.sonata-bc #sidebar h4{margin-top:20px;margin-bottom:10px;font-size:13px}
@@ -117,7 +117,7 @@ svg {
 }
 
 .sonata-bc .welcome{display:none}
-.sonata-bc .overlay-sidebar #sidebar{position:absolute;z-index:1000;height:auto;border-bottom-right-radius:5px;overflow:hidden}
+.sonata-bc .overlay-sidebar #sidebar{position:absolute;z-index:500;height:auto;border-bottom-right-radius:5px;overflow:hidden}
 .sonata-bc .overlay-sidebar #sidebar .welcome{display:block}
 .sonata-bc .overlay-sidebar #sidebar #sidebar_content{display:none}
 .sonata-bc .welcome p{padding:10px 20px 20px;font-size:110%;font-weight:300}
